@@ -1,6 +1,8 @@
 package com.sds.minion.agent.run;
 
+import java.io.File;
 import java.io.IOException;
+import java.io.PrintStream;
 
 public class ProcessRunner {
 
@@ -9,30 +11,42 @@ public class ProcessRunner {
 		return osName.indexOf("Windows") > -1;
 	}
 
-	public void runProcess(String cmd) {
-		runProcess(cmd, false);
+	public void runProcess(String dir, String cmd) {
+		runProcess(dir, cmd, false);
 	}
 	
-	public void runProcess(String cmd, boolean sync) {
+	public void runProcess(String dir, String cmd, boolean sync) {
 		try {
 			int exitCode = 1;
 			if (isWindows()) {
-				Process pc = Runtime.getRuntime().exec("cmd.exe /c " + cmd);
+                ProcessBuilder pb = new ProcessBuilder("cmd.exe", "/C", cmd);
+                if(dir != null && !"".equals(dir)) pb.directory(new File(dir));
+                pb.redirectOutput(ProcessBuilder.Redirect.INHERIT);
+                pb.redirectError(ProcessBuilder.Redirect.INHERIT);
+                Process p = pb.start();
 				if(sync){
-					exitCode = pc.waitFor();
+                    exitCode = p.waitFor();
 				}
-			}else{
+			} else{
 				Process pc = Runtime.getRuntime().exec(cmd);
 				if(sync){
 					exitCode = pc.waitFor();
 				}
 			}
-			System.out.println("cmd:"+cmd);
-			System.out.println("exitCode:"+exitCode);
+			System.out.println("cmd: " + cmd);
+			System.out.println("exitCode: " + exitCode);
+            Thread.sleep(5000);
 		} catch (IOException e) {
 			e.printStackTrace();
 		} catch (InterruptedException e) {
 			e.printStackTrace();
 		}
 	}
+
+    public static void main(String... args) throws InterruptedException {
+        ProcessRunner processRunner = new ProcessRunner();
+        processRunner.runProcess("d:/dev/apache-tomcat-7.0.47/bin", "startup.bat", false);
+        Thread.sleep(10000);
+
+    }
 }
